mool/tests/compile/fail/filterable_invalid_op.stderr
error: Unknown literal value `contains` at op
  --> tests/compile/fail/filterable_invalid_op.rs:13:5
   |
13 |     #[filter(op = "contains", column = "title")]
   |     ^
